Criado classe que não atende ao principio S do SOLID

--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
     "description": "Treinamento solid, dedicado a letra S",
     "autoload": {
         "psr-4": {
-            "Patrick\\SolidSPratice\\": "src/"
+            "App\\": "src/"
         }
     },
     "authors": [
